@@ -94,6 +94,7 @@ our @EXPORT_OK = qw(
                      lshiftint rshiftint rashiftint
                      setbit clrbit tstbit
                      bitand bitor bitxor
+                     is_divisible is_congruent
                      is_power is_prime_power is_semiprime is_almost_prime
                      is_square is_smooth is_rough is_powerful is_practical
                      is_carmichael is_fundamental is_totient
@@ -1913,6 +1914,21 @@ The result is identical to C<scalar(factor_exp($n))>.
 This corresponds to Pari's C<omega> function
 and Mathematica's C<PrimeNu[n]> function.
 
+=head2 is_divisible
+
+Given integers C<n> and C<d>, returns 1 if C<n> is exactly divisible by C<d>,
+and 0 otherwise.
+
+This corresponds to the GMP function C<mpz_divisible_p>.
+This includes its semantics with C<d=0> which returns 0 unless C<n=0>.
+
+=head2 is_congruent
+
+Given integers C<n>, C<c>, and C<d>, returns 1 if C<n> is congruent to C<c>
+modulo C<d>, and 0 otherwise.
+
+This corresponds to the GMP function C<mpz_congruent_p>.
+This includes its semantics with C<d=0> which returns 0 unless C<n=c>.
 
 =head2 is_power
 
