@@ -14,6 +14,8 @@ Revision history for Perl module Math::Prime::Util::GMP
     - is_practical(n)          is n a practical number
     - is_trial_prime(n)        primality using trial division
     - is_almost_prime(k,n)     does n have exactly k prime factors
+    - is_divisible(n,d)        is n exactly divisible by d
+    - is_congruent(n,c,d)      is n congruent to c mod d
     - prime_bigomega(n)        number of factors (with multiplicity)
     - prime_omega(n)           number of factors (distinct)
     - powerful_count(n[,k])    count of k-powerful numbers <= n
